[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://assets/iron-flying-jpg.jpg-2.jpg" type="Texture" id=2]
[ext_resource path="res://assets/bt-1.png" type="Texture" id=3]
[ext_resource path="res://fonte/big-cartton-160.fnt" type="BitmapFont" id=4]
[ext_resource path="res://assets/bt-2.png" type="Texture" id=5]
[ext_resource path="res://scenes/about.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/Impactist_-_Wires.smp" type="Sample" id=7]

[sub_resource type="Animation" id=1]

resource/name = "blink"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.595647 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="SampleLibrary" id=2]

samples/Impactist_-_Wires = {
"db": 0.01,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}

[node name="game" type="Node"]

script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( -12.0345, 0.00012207 )
transform/scale = Vector2( 0.899408, 1 )
texture = ExtResource( 2 )
centered = false

[node name="controle" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="bt-start" type="TextureButton" parent="controle"]

editor/display_folded = true
rect/scale = Vector2( 0.714242, 0.670394 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 81.0
margin/top = 1052.0
margin/right = 477.0
margin/bottom = 1252.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="anim" type="AnimationPlayer" parent="controle/bt-start"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/blink = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "blink"

[node name="Label" type="Label" parent="controle/bt-start"]

rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 77.0
margin/top = 29.0
margin/right = 662.0
margin/bottom = 323.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Start"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="bt-credits" type="TextureButton" parent="controle"]

editor/display_folded = true
rect/scale = Vector2( 0.714242, 0.670394 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 371.0
margin/top = 1048.0
margin/right = 759.0
margin/bottom = 1251.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Label" type="Label" parent="controle/bt-credits"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 57.0
margin/top = 49.0
margin/right = 984.0
margin/bottom = 343.0
custom_fonts/font = ExtResource( 4 )
text = "Creditos"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="about" type="Node2D" parent="."]

editor/display_folded = true

[node name="about" parent="about" instance=ExtResource( 6 )]

[node name="soundPlay" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 2 )
default/volume_db = 0.5
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="mouse_enter" from="controle/bt-start" to="." method="_on_btstart_mouse_enter"]

[connection signal="mouse_exit" from="controle/bt-start" to="." method="_on_btstart_mouse_exit"]

[connection signal="mouse_enter" from="controle/bt-credits" to="." method="_on_btcredits_mouse_enter"]

[connection signal="mouse_exit" from="controle/bt-credits" to="." method="_on_btcredits_mouse_exit"]


